stuf/src/p4/tests/t011.err
Semantic error on line 1: Game object 'my_rectangle' does not have a parameter called 'qbert'.
Semantic error on line 1: Game object 'my_rectangle' does not have a parameter called 'tron'.
